# cuda-project-template

./: CMakeLists.txt  README.md
include/: cuda_macros.cuh  cuda_macros.hpp
include/hostutils/: utils.hpp
include/kernels/: add_vec.cuh
lib/: CMakeLists.txt
lib/hostutils/: CMakeLists.txt  utils.cpp
lib/kernels/: CMakeLists.txt  add_vec.cu
tools/: CMakeLists.txt
tools/vec-adder/: CMakeLists.txt  main.cpp
